force-app/main/default/objects/Remito__c/Remito__c.object-meta.xml
<CustomObject>
    <label>Remito</label>
    <nameField>
        <displayFormat>REM-{00000000}</displayFormat>
        <label>Nombre de Remito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remitos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>