force-app/main/default/objects/Remito__c/fields/Cantidad_orden_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_orden_de_compra__c</fullName>
    <formula>Orden_de_compra_detalle__r.Cantidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad orden de compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>