force-app/main/default/objects/Remito__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <label>Concepto</label>
    <type>TextArea</type>
</CustomField>