force-app/main/default/objects/Remito__c/fields/Detalle__c.field-meta.xml
<CustomField>
    <fullName>Detalle__c</fullName>
    <formula>Orden_de_compra_detalle__r.Detalle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detalle</label>
    <type>Text</type>
</CustomField>