force-app/main/default/objects/Remito__c/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>TextArea</type>
</CustomField>