force-app/main/default/objects/Remito__c/fields/Orden_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_compra__c</fullName>
    <label>Orden de compra</label>
    <referenceTo>Orden_de_compra__c</referenceTo>
    <relationshipLabel>Remitos</relationshipLabel>
    <relationshipName>Remitos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>