force-app/main/default/objects/Remito__c/fields/Orden_de_compra_detalle__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_compra_detalle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orden de compra detalle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Orden_de_compra_entrega__c.Orden_de_compra__c</field>
            <operation>equals</operation>
            <valueField>$Source.Orden_de_compra__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orden_de_compra_entrega__c</referenceTo>
    <relationshipLabel>Remitos</relationshipLabel>
    <relationshipName>Remitos</relationshipName>
    <type>Lookup</type>
</CustomField>