force-app/main/default/objects/Remito__c/fields/Tipo_de_remito__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_remito__c</fullName>
    <label>Tipo de remito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>